--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>농심</title>
-    <link rel="shortcut icon" href="img/faviconb.ico">
+    <link rel="shortcut icon" href="img/favicon.ico">
     <link rel="stylesheet" href="css/index.css">
     <script src="js/index.js" defer></script>
 </head>
@@ -459,8 +459,8 @@
                                     </ul>
                                 </div>
                                 <div class="controls">
-                                    <span class="prev">prev</span>
-                                    <span class="next">next</span>
+                                    <span class="prev"></span>
+                                    <span class="next"></span>
                                 </div>
                             </div>                             
                                 <a href="#" class="con-button">농심 소식</a>
@@ -471,9 +471,8 @@
                                 <h1 class="con-title">한국을 대표하는 맛,<br>
                                     세계를 감동시킨 우리의 맛</h1>
                                 <div class="main-con-img">
-                                    <!-- <img src="img/sec3_0.png" alt="농심소개img(pc)" class="pc-con-img">
-                                    <img src="img/sec3_1.png" alt="농심소개img(mo)" class="mo-con-img"> -->
                                     <div class="active-colorBox">
+                                        <div class="colorBox graphic1"><img src="img/graphic4.svg" alt=""></div>
                                         <div class="colorBox orange"></div>
                                         <div class="colorBox red"></div>
                                     </div>
@@ -505,86 +504,87 @@
                         <div class="section sec4">
                             <div class="sec-con">
                                 <h1 class="con-title">N.LIVE로 즐기는 <br class='pc-hidden'> 농심 이야기</h1>
-                                <!-- <div class="sec4-slide">
+                                <div class="sec4-slide">
                                     <div id="slider" class="slider">
                                         <div class="wrapper">
-                                            <div id="slides" class="slides">
-                                                <div class="slide">
+                                            <ul id="slides" class="slides">
+                                                <li class="slide">
                                                     <div class="thumbnail-img">
                                                     </div>
-                                                    <h2>#CATEGORY1</h2>
-                                                    <p>lorem ipsum dolor sit</p>
-                                                    <span class="card-date"></span>
-                                                </div>
-                                                <div class="slide">
+                                                    <h2>#CATEGORY</h2>
+                                                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+                                                    <span class="info-date">0000.00.00</span>
+                                                </li>
+                                                <li class="slide">
                                                     <div class="thumbnail-img">
                                                     </div>
-                                                    <h2>#CATEGORY2</h2>
-                                                    <p>lorem ipsum dolor sit</p>
-                                                    <span class="card-date"></span>
-                                                </div>
-                                                <div class="slide">
+                                                    <h2>#CATEGORY</h2>
+                                                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+                                                    <span class="info-date">0000.00.00</span>
+                                                </li>
+                                                <li class="slide">
                                                     <div class="thumbnail-img">
                                                     </div>
-                                                    <h2>#CATEGORY3</h2>
-                                                    <p>lorem ipsum dolor sit</p>
-                                                    <span class="card-date"></span>
-                                                </div>
-                                                <div class="slide">
+                                                    <h2>#CATEGORY</h2>
+                                                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+                                                    <span class="info-date">0000.00.00</span>
+                                                </li>
+                                                <li class="slide">
                                                     <div class="thumbnail-img">
                                                     </div>
-                                                    <h2>#CATEGORY4</h2>
-                                                    <p>lorem ipsum dolor sit</p>
-                                                    <span class="card-date"></span>
-                                                </div>
-                                                <div class="slide">
+                                                    <h2>#CATEGORY</h2>
+                                                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+                                                    <span class="info-date">0000.00.00</span>
+                                                </li>
+                                                <li class="slide">
                                                     <div class="thumbnail-img">
                                                     </div>
-                                                    <h2>#CATEGORY5</h2>
-                                                    <p>lorem ipsum dolor sit</p>
-                                                    <span class="card-date"></span>
-                                                </div>
-                                                <div class="slide">
+                                                    <h2>#CATEGORY</h2>
+                                                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+                                                    <span class="info-date">0000.00.00</span>
+                                                </li>
+                                                <li class="slide">
                                                     <div class="thumbnail-img">
                                                     </div>
-                                                    <h2>#CATEGORY6</h2>
-                                                    <p>lorem ipsum dolor sit</p>
-                                                    <span class="card-date"></span>
-                                                </div>
-                                                <div class="slide">
+                                                    <h2>#CATEGORY</h2>
+                                                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+                                                    <span class="info-date">0000.00.00</span>
+                                                </li>
+                                                <li class="slide">
                                                     <div class="thumbnail-img">
                                                     </div>
-                                                    <h2>#CATEGORY7</h2>
-                                                    <p>lorem ipsum dolor sit</p>
-                                                    <span class="card-date"></span>
-                                                </div>
-                                                <div class="slide">
+                                                    <h2>#CATEGORY</h2>
+                                                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+                                                    <span class="info-date">0000.00.00</span>
+                                                </li>
+                                                <li class="slide">
                                                     <div class="thumbnail-img">
                                                     </div>
-                                                    <h2>#CATEGORY8</h2>
-                                                    <p>lorem ipsum dolor sit</p>
-                                                    <span class="card-date"></span>
-                                                </div>
-                                                <div class="slide">
+                                                    <h2>#CATEGORY</h2>
+                                                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+                                                    <span class="info-date">0000.00.00</span>
+                                                </li>
+                                                <li class="slide">
                                                     <div class="thumbnail-img">
                                                     </div>
-                                                    <h2>#CATEGORY9</h2>
-                                                    <p>lorem ipsum dolor sit</p>
-                                                    <span class="card-date"></span>
-                                                </div>
-                                                <div class="slide">
+                                                    <h2>#CATEGORY</h2>
+                                                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+                                                    <span class="info-date">0000.00.00</span>
+                                                </li>
+                                                <li class="slide">
                                                     <div class="thumbnail-img">
                                                     </div>
-                                                    <h2>#CATEGORY10</h2>
-                                                    <p>lorem ipsum dolor sit</p>
-                                                    <span class="card-date"></span>
-                                                </div>
-                                            </div>
+                                                    <h2>#CATEGORY0</h2>
+                                                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+                                                    <span class="info-date">0000.00.00</span>
+                                                </li>
+                                            </ul>
                                         </div>
-                                        <a id="prev" class="control prev"></a>
-                                        <a id="next" class="control next"></a>
+                                        <span class="frame"></span>
+                                        <!-- <a id="prev" class="control prev"></a>
+                                        <a id="next" class="control next"></a> -->
                                     </div>
-                                </div> -->
+                                </div>
                                 <a href="#" class="con-button">N.LIVE</a>
                             </div>
                         </div>
@@ -808,7 +808,15 @@
                         <div class="section sec8">
                             <div class="sec-con">
                                 <ul>
-                                    <li></li>
+                                    <li><a href="#">
+                                        <p>실시간 주가정보</p>
+                                        <h2 class="stock-value">299,000</h2>
+                                        <div class="stock-info">
+                                            <span class="">전일대비</span><span class="stock-value-updown"></span>
+                                            <span>｜</span>
+                                            <span class="">등락율</span><span class="stock-rates"></span>
+                                        </div>
+                                    </a></li>
                                     <li><a href="#">
                                             <div class="icon">
                                                 <img src="img/icon-cs.svg" alt="CS CENTER">
